--- a/MyShop/templates/MyShop/index.html
+++ b/MyShop/templates/MyShop/index.html
@@ -1,11 +1,16 @@
   {% extends 'base.html' %}
     {% block body %}
     {% for product in products %}
-        <br/>
-        Name : <a href="/details/{{ product.pid }}">{{ product.name }}</a>
-        price : {{ product.price }}
-        image : <img src="{{ product.image.url }}" alt="No image Found!" style="height:100px;width:100px;">
-        category : {{ product.category.name }}
-        <br/>
-      {% endfor %}
-      {% endblock %}
+    <br/>
+    <div class="card" style="width: 9rem;">
+      <img src="{{ product.image.url }}" class="card-img-top" alt="No image Found!">
+      <div class="card-body">
+        <h5 class="card-title"><a href="/details/{{ product.pid }}">{{ product.name }}</a></h5>
+        <p class="card-text">Rs. {{ product.price }}</p>
+        <p class="card-text">Category : <a href="/category/{{ product.category.name }}">{{ product.category.name }}</a> </p>
+        <a href="#" class="btn btn-primary">Add to Cart !</a>
+      </div>
+    </div>
+    <br/>
+    {% endfor %}
+    {% endblock %}
