--- a/templates/base.html
+++ b/templates/base.html
@@ -20,23 +20,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+      
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/accounts/register/" >
       <button class="btn btn-outline-success mr-sm-2" type="submit">Register</button>
@@ -46,7 +30,9 @@
     </form>
   </div>
 </nav>
-{% block body %}
-{% endblock %}
+<div class="container">
+  {% block body %}
+  {% endblock %}
+</div>
   </body>
 </html>
