--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Cart">Go To Your Cart !</a>
+        <a class="nav-link" href="/cart">Go To Your Cart !</a>
       </li>
 
     </ul>
