--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/category/Cars/">Cars</a>
-          <a class="dropdown-item" href="/category/Mobile/">Mobiles</a>
+          <a class="dropdown-item" href="/category/Mobiles/">Mobiles</a>
         </div>
       </li>
       <li class="nav-item">
