--- a/MyShop/templates/MyShop/details.html
+++ b/MyShop/templates/MyShop/details.html
@@ -8,7 +8,7 @@
         <p class="card-text">{{ product.desc }}</p>
         <p class="card-text">Rs. {{ product.price }}</p>
         <p class="card-text">Availability: {% if product.quantity > 0 %}<span class="badge badge-success">Available !</span>{% else %}<span class="badge badge-danger">Out of Stock !!</span>{% endif %}</p>
-        <a href="{% url 'MyShop:cart' %}" class="btn btn-primary">Add to Cart !</a>
+        <a href="/add_to_cart/{{ product.pid }}/1" class="btn btn-primary">Add to Cart !</a>
       </div>
     </div>
     {% else %}
