--- a/templates/base.html
+++ b/templates/base.html
@@ -48,14 +48,14 @@
     {% endif %}
   </div>
 </nav>
-<br/>
+<br>
 <div class="container">
-  <div class="row justify-content-md-center">
-    <br/>
+ <!--<div class="row justify-content-md-center">-->
   {% block body %}
   {% endblock %}
-  <br/>
-</div>
+<!--</div>-->
+<!-- {% block body2 %}
+{% endblock %} -->
 </div>
   </body>
 </html>
