--- a/MyShop/templates/MyShop/index.html
+++ b/MyShop/templates/MyShop/index.html
@@ -1,8 +1,9 @@
   {% extends 'base.html' %}
     {% block body %}
-    <br/>
+    <div class="row justify-content-md-center">
+    <br>
     {% for product in products %}
-    <br/>
+    <br>
     <div class="col-md-6 col-lg-4 col-sm-1">
     <div class="card" style="width: 9rem;">
       <img src="{{ product.image.url }}" class="card-img-top" alt="No image Found!">
@@ -13,7 +14,8 @@
       </div>
     </div>
     </div>
-    <br/>
+    <br>
     {% endfor %}
-    <br/>
+    <br>
+    </div>
     {% endblock %}
