--- a/MyShop/templates/MyShop/cart.html
+++ b/MyShop/templates/MyShop/cart.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
-{% if cart %}
 <div class="row justify-content-md-center">
-<div class="col-md-6 col-lg-4 col-sm-1">
+{% if cart %}
 {% for product_pair in prod_pairs %}
+<div class="col-md-6 col-lg-4 col-sm-1">
 <br>
 <div class="card" style="width: 9rem;">
   <img src="{{ product_pair.product.image.url }}" class="card-img-top" alt="No image Found!">
@@ -28,15 +28,19 @@
     <br>
     <a class="btn btn-danger" href="/remove_from_cart/{{ product_pair.product.pid }}">REMOVE</a>
   </div>
-</div>
-</div>
+  </div>
+  </div>
 {% endfor %}
 </div>
+<div style="margin-top:10px;">
 <a class ="btn btn-success" href="#">Checkout !</a>
+</div>
 {% else %}
 <div class="alert alert-danger" role="alert">No Product in Cart !!</div>
 
 {% endif %}
 <br>
+<p style="display:block;">
 <a class ="btn btn-primary" href="/">Continue Shopping !</a>
+</p>
 {% endblock %}
