--- a/MyShop/templates/MyShop/details.html
+++ b/MyShop/templates/MyShop/details.html
@@ -1,5 +1,6 @@
     {% extends 'base.html' %}
     {% block body %}
+    <div class="row justify-content-md-center">
     {% if product %}
     <div class="card" style="width: 9rem;">
       <img src="{{ product.image.url }}" class="card-img-top" alt="No image Found!">
@@ -14,4 +15,5 @@
     {% else %}
     Product Not Found !!
     {% endif %}
+    </div>
     {% endblock %}
