Order model added!

--- a/MyShop/templates/MyShop/cart.html
+++ b/MyShop/templates/MyShop/cart.html
@@ -33,7 +33,7 @@
 {% endfor %}
 </div>
 <div style="margin-top:10px;">
-<a class ="btn btn-success" href="#">Checkout !</a>
+<a class ="btn btn-success" href="/checkout">Checkout !</a>
 </div>
 {% else %}
 <div class="alert alert-danger" role="alert">No Product in Cart !!</div>
