--- a/MyShop/templates/MyShop/invoice.html
+++ b/MyShop/templates/MyShop/invoice.html
@@ -10,4 +10,4 @@ Quantity : {{ order.quantity }}
 {% endfor %}
 
 
-<a href="/" style="link:after, visited:after { content:' [' attr(href) '] '; }">HOME</a>
+<a href="http://127.0.0.1:8000/" style="link:after, visited:after { content:' [' attr(href) '] '; }">HOME</a>
