--- a/MyShop/templates/MyShop/index.html
+++ b/MyShop/templates/MyShop/index.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WELCOME TO KINJAL-KART!</title>
-  </head>
-  <body>
-    {% if products %}
-      {% for product in products %}
-        <br/>
-        Name : <a href="/details/{{ product.pid }}">{{ product.name }}</a>
-        price : {{ product.price }}
-        description : {{ product.desc }}
-        image : <img src="{{ MEDIA_URL }}/{{ product.image }}" alt="No image Found!" style="height:100px;width:100px;">
-        category : {{ product.category.name }}
-        <br/>
-      {% endfor %}
-    {% else %}
-      No Products to display!!!!!!!
-    {% endif %}
-  </body>
-</html>
+  {% extends 'base.html' %}
+    {% block body %}
+    <div class="row justify-content-md-center">
+    <br>
+    {% for product in products %}
+    <br>
+    <div class="col-md-6 col-lg-4 col-sm-1">
+    <div class="card" style="width: 9rem;">
+      <img src="{{ product.image.url }}" class="card-img-top" alt="No image Found!">
+      <div class="card-body">
+        <h5 class="card-title"><a href="/details/{{ product.pid }}">{{ product.name }}</a></h5>
+        <p class="card-text">Rs. {{ product.price }}</p>
+        <p class="card-text">Category : <a href="/category/{{ product.category.name }}">{{ product.category.name }}</a> </p>
+      </div>
+    </div>
+    </div>
+    <br>
+    {% endfor %}
+    <br>
+    </div>
+    {% endblock %}
